# fastApi-jinja2

./: pyproject.toml  readme.md
exemplo/: advance.py  simple.py
output/: index.html
src/: fast_zerotamplete_generic.py  fast_zerotamplete_jinja2.py  fastapi.py  fastapi_tamplete_jinja2.py
templates/: homepage.html  index.html
